--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,40 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* Fonts */
+@font-face {
+    font-family: 'Poller One';
+    src: url('../public/fonts/PollerOne-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Poetsen One';
+    src: url('../public/fonts/PoetsenOne-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* globale rules  */
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Poetsen One', sans-serif;
+    /* font-family: 'Poller One', sans-serif; */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+:root {
+    --main-color: #f69e7c;
+    --second-color: #041831;
+    --section-padding: 60px;
+    --section-background: #f6f6f6;
+
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+    font-family: "Open Sans", sans-serif;
+    background-color: var(--second-color);
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
